mocked api controllers and created swagger stuff for apis
